Added mongoose support

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "comp308-w2019-lesson3a",
+  "name": "comp308-w2019-lesson4a",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -15,11 +15,22 @@
     "http-errors": "~1.6.2",
     "jquery": "^3.3.1",
     "morgan": "~1.9.0",
+    "package": "^1.0.1",
     "popper.js": "^1.14.6"
   },
   "main": "server.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/mongoose": "^5.3.12"
+  },
   "author": "prateek",
   "license": "ISC",
-  "description": ""
+  "description": " mongo desc",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kaushalprateek/COM308-W2019-Lesson4A.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kaushalprateek/COM308-W2019-Lesson4A/issues"
+  },
+  "homepage": "https://github.com/kaushalprateek/COM308-W2019-Lesson4A#readme"
 }
